feat: implemented get authenticated user
wrote the required documentation
changed the jwt strategy code (fixed the FindOne callback error with using try catch block)
did not implement the test code for this feature because of problems in jwt validation middleware in testing

next: implement frontend of register user and login feature
