# packages/server-api/src/api/routes/v1/auth-router.js
@@ -1,14 +1,20 @@
 const router = require('express').Router();
 
-const { register, login } = require('../../controllers/auth-controller');
+const {
+  register,
+  login,
+  getLoggedInUser,
+} = require('../../controllers/auth-controller');
 const {
   registerUserRequestSchema,
   loginUserRequestSchema,
 } = require('../../models/request-models');
-const validateBody = require('../../middlewares/validate-request-body');
+const { validateBody, isAuthenticated } = require('../../middlewares');
 
 router.post('/register', validateBody(registerUserRequestSchema), register);
 
 router.post('/login', validateBody(loginUserRequestSchema), login);
+
+router.get('/user', isAuthenticated, getLoggedInUser);
 
 module.exports = router;
